# bgrun

./: .gitignore  .goreleaser.yaml  Cargo.toml  README.md  book.toml  install.sh
.github/workflows/: docs.yml  release.yml
.opencode/plans/: tool-schemas-and-memory-guardrails.md
crates/bgrun-cli/: Cargo.toml  build.rs
crates/bgrun-cli/src/: autostart.rs  client.rs  duration.rs  main.rs  output.rs
crates/bgrun-cli/src/commands/: attach.rs  clean.rs  completions.rs  diff.rs  expect.rs  interactive.rs  kill.rs  list.rs  mod.rs  run.rs  run_group.rs  schema.rs  screen.rs  send.rs  skill.rs  stats.rs  status.rs  tail.rs  wait.rs
crates/bgrun-core/: Cargo.toml
crates/bgrun-core/src/: config.rs  job.rs  job_store.rs  lib.rs
crates/bgrun-core/tests/: integration.rs
crates/bgrun-daemon/: Cargo.toml
crates/bgrun-daemon/src/: audit.rs  lib.rs  log_manager.rs  main.rs  orphan.rs  readiness.rs  runner.rs  server.rs  state.rs
crates/bgrun-proto/: Cargo.toml
crates/bgrun-proto/src/: command.rs  lib.rs  paths.rs  response.rs  types.rs
docs/: architecture.md  bgrun-toml.md  commands.md
docs/bgrun/: SKILL.md
docs/man/: bgrun-daemon.1
packaging/completions/: bgrun.bash  bgrun.fish  bgrun.zsh
scripts/: install.sh
