[workspace]
members = [
    "crates/bgrun-proto",
    "crates/bgrun-core",
    "crates/bgrun-daemon",
    "crates/bgrun-cli",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.90"
version = "0.4.0"
license = "MIT"
homepage = "https://github.com/bethropolis/bgrun"
repository = "https://github.com/bethropolis/bgrun"

[workspace.dependencies]
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
nix = { version = "0.29", features = ["process", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "6.0"
uuid = { version = "1.14", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
toml = "0.8"
portable-pty = "0.8"
sysinfo = "0.33"
thiserror = "2.0"
regex = "1.11"
shlex = "1.3"
strip-ansi-escapes = "0.2"
crossterm = "0.28"
futures-util = { version = "0.3", default-features = false, features = ["std", "async-await"] }
schemars = "0.8"
inquire = "0.7"
tokio-util = "0.7"
clap_mangen = "0.2"

[workspace.lints.rust]
unsafe_code = "warn"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"