[package]
name = "bgrun-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "bgrun"
path = "src/main.rs"

[dependencies]
bgrun-proto = { path = "../bgrun-proto" }
bgrun-core = { path = "../bgrun-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
is-terminal = "0.4"
crossterm = { workspace = true, features = ["event-stream"] }
shlex = { workspace = true }
futures-util = { workspace = true }
schemars = { workspace = true }
inquire = { workspace = true }
clap_mangen = { workspace = true }