[package]
name = "bgrun-core"
version = "0.1.0"
edition = "2021"

[dependencies]
bgrun-proto = { path = "../bgrun-proto" }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }