[package]
name = "bgrun-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
bgrun-proto = { path = "../bgrun-proto" }
chrono = { workspace = true }
uuid = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
shlex = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }