[package]
name = "bgrun-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bgrun-daemon"
path = "src/main.rs"

[dependencies]
bgrun-proto = { path = "../bgrun-proto" }
bgrun-core = { path = "../bgrun-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
nix = { workspace = true, features = ["process", "signal", "user", "fs"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
directories = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
toml = { workspace = true }
portable-pty = { workspace = true }
sysinfo = { workspace = true }
libc = "0.2"
once_cell = { workspace = true }
regex = { workspace = true }
shlex = { workspace = true }
strip-ansi-escapes = { workspace = true }