[package]
name = "bgrun-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "bgrun-daemon"
path = "src/main.rs"

[dependencies]
bgrun-proto = { path = "../bgrun-proto" }
bgrun-core = { path = "../bgrun-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
nix = { workspace = true, features = ["process", "signal", "user", "fs"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
directories = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
toml = { workspace = true }
portable-pty = { workspace = true }
sysinfo = { workspace = true }
libc = "0.2"
regex = { workspace = true }
shlex = { workspace = true }
strip-ansi-escapes = { workspace = true }
tokio-util = { workspace = true }